<resources>
    <string name="app_name">PianoGrupo10</string>
    <string name="doo">Do</string>
    <string name="re">Re</string>
    <string name="mi">Mi</string>
    <string name="fa">Fa</string>
    <string name="sol">Sol</string>
    <string name="la">La</string>
    <string name="si">Si</string>
    <string name="animales">Animales</string>
    <string name="piano_animall">Piano animal</string>
    <string name="piano_instrumental">Piano Instrumental</string>
    <string name="instrumentos">Instrumentos</string>
</resources>